# micro-service

./: CMakeLists.txt
source/: main.cpp  microsvc_controller.cpp
source/foundation/: basic_controller.cpp
source/foundation/include/: std_micro_service.hpp
